Show post visibility and minor ui fixes (#250)
* Fix list responses

* Move parse_res_to_dict to requests.py

* Show post visibility. Minor ui fixes

--- a/code/socialDistribution/static/css/posts/style.css
+++ b/code/socialDistribution/static/css/posts/style.css
@@ -4,7 +4,8 @@ body {
 
 #post_container {
     width: 100%;
-    margin: auto;    
+    margin: auto;
+    padding-bottom: 2%;  
 }
 
 #post {
@@ -25,6 +26,7 @@ body {
 @media (min-width: 800px) {
     #post_container {
         width: 75%;
+        padding-bottom: 2%;
     }
     
     #post {
